# bm-shapes

./: .gitignore  LICENSE  README.md  White noise over mappings.ipynb  pyproject.toml  requirements.txt  setup.cfg
data/COMA_id1_expr1/: bareteeth.000002.ply  bareteeth.000003.ply  bareteeth.000004.ply  bareteeth.000005.ply  bareteeth.000006.ply  bareteeth.000007.ply  bareteeth.000008.ply  bareteeth.000009.ply  bareteeth.000010.ply  bareteeth.000011.ply  bareteeth.000012.ply  bareteeth.000013.ply  bareteeth.000014.ply  bareteeth.000015.ply  bareteeth.000016.ply  bareteeth.000017.ply  bareteeth.000018.ply  (+93 more)
examples/: Approximation quality with spherical harmonics.ipynb  DIRTY - Estimating coefficients.ipynb  DIRTY - Shape bridge through spherical harmonic decomposition.ipynb  DIRTY - Spherical harmonic decompostion.ipynb  Estimating coefficients.ipynb  Shape bridge through spherical harmonic decomposition.ipynb  Shape stochastics - Functional shapes.ipynb  Shape stochastics.ipynb  Spherical harmonic decompostion.ipynb  Stochastics on general shapes (mesh).ipynb  TEST - Bridge between complex meshes.ipynb  TEST - Stochastics on a general shape.ipynb  Untitled-1.ipynb  Untitled.ipynb  Wavelet decompostion.ipynb  White noise over mappings.ipynb  construct_sphere.py  plot_basis.py  plotting.py  pyproject.toml  test_shtools.py  using_construct_sphere.ipynb  using_shtools.py  wavelet decompostion shapes.ipynb
tests/: test_plotting.py  test_sphere.py
utils/: brownian_motion.py  lddmm_utils.py  mesh_processing.py  plotting.py  shape_stochastics.py  sph_utils.py  sphere.py
(+616 files in other folders)
