
[metadata]
name = bmshapes
description = Brownian motion on shapes
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    scipy
    trimesh
    pyssht
    pyshtools

python_requires = >=3.7


[options.extras_require]
examples =
    jupyter