
[metadata]
name = bmshapes
description = Brownian motion on shapes
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy
    scipy
    trimesh
    open3d
    imageio
    matplotlib

python_requires = >=3.7
